@@ -1,3 +1,12 @@
+---
+title: "Exeris Kernel — Reference Deployment (single-node Community)"
+type: operations
+visibility: public
+owning-repo: exeris-kernel
+status: active
+last-verified: 2026-09-08
+---
+
 # Exeris Kernel — Reference Deployment (single-node Community)
 
 > Operator-facing reference for deploying the **open-core (Community)** kernel as a single node.
@@ -17,7 +26,7 @@ flowchart LR
 ```
 
 - **Kernel** — one JVM, one node. Horizontal scale is the host application's concern (no built-in clustering).
-- **PostgreSQL 16** — required for Persistence, Flow snapshot store, and the transactional outbox. Pooled via HikariCP.
+- **PostgreSQL 16** — the version most Persistence, Flow snapshot store, and transactional outbox integration tests target via Testcontainers. Pooled via HikariCP. The RowCursor type-rendering contract (ADR-080) is separately validated against PostgreSQL 17 — see [`../rowcursor-type-set.md`](../rowcursor-type-set.md).
 - **Kafka 3.6** *(optional)* — only when the Events subsystem uses the Kafka driver (`exeris-kernel-community-kafka`). Without it, Events runs on the in-memory bus.
 - **JWKS endpoint** *(optional)* — only when OIDC/JWT validation is enabled (Security subsystem); supports key rotation with an overlap window.
 
@@ -25,13 +34,16 @@ flowchart LR
 
 | Setting | Value |
 |:--------|:------|
-| **JDK** | Java 26, `--enable-preview` (Loom VTs, Panama FFM, `ScopedValue`, `StructuredTaskScope`) |
-| **Profile** | `kernel.profile=PROD` (opaque error codes; DEV exposes stack traces — keep PROD in deployment) |
+| **JDK** | Java 25 LTS or newer — **no `--enable-preview`** (Loom VTs, Panama FFM and `ScopedValue` are all GA). Pass `--enable-native-access=ALL-UNNAMED` for the FFM transport/crypto paths. |
+| **Profile** | `EXERIS_KERNEL_PROFILE=prod` env var, or `exeris.kernel.profile=prod` system property (`PROD` is the default when neither is set) — opaque error codes; DEV exposes stack traces, so keep PROD in deployment |
 | **TLS** | OpenSSL 3.0 – 4.x (fd-owner engine); 3.x floor retained for FIPS-provider compatibility (ADR-008) |
 | **HTTP** | HTTP/1.1 + HTTP/2 (h2 + h2c), TLS 1.2 / 1.3 |
 | **GC** | G1 is the safe default; size the heap to the working set (see envelope). |
+| **File descriptors** | `ulimit -n` **above `http.maxConnections`** (default 4096) plus headroom for JDBC pools, JFR files and the listener itself — 8192 is a safe starting point. The connection cap can only refuse cleanly while it is the ceiling reached *first*; the common default of 1024 is below the connection cap, and when the OS limit wins the race the listener stops accepting **permanently** rather than refusing (ADR-081 §Consequences). |
 
-Run the kernel JVM (and Maven, if building on the box) on **JDK 26** — the build plugin is class v70 and a lower JDK fails with an opaque classworlds trace.
+Run the kernel JVM on **JDK 25 LTS or newer**. The distributed artifact is preview-clean since 0.11 (ADR-066), so the flag this document previously mandated is not merely unnecessary — passing it is not what the shipped jar is built for. The separate `-preview` artifact tracks the newest JDK and does require the flag; it is a different coordinate, chosen deliberately, and this deployment is not it. See [`support-matrix.md`](../support-matrix.md), which this table must agree with.
+
+If you build on the box, Maven needs a JDK matching the build's own baseline.
 
 ## Resource envelope (reference baseline — validate per workload)
 
@@ -46,7 +58,7 @@ authority for measured throughput/latency; this doc deliberately quotes no fixed
 | CPU | 1 vCPU minimum; 2+ recommended (reactor + VT scheduler + DB pool) |
 | Disk | Postgres-sized; the kernel itself is near-stateless apart from JFR recordings |
 
-**Boot SLO** (performance contract, measured via the `KernelBootReady` JFR event): cold-start **P99 ≤ 500 ms (Community) / ≤ 800 ms (Enterprise)** — see [`../whitepaper.md`](../whitepaper.md). Do **not** set a nonzero probe `initialDelay`; use `initialDelaySeconds: 0` plus a `startupProbe` (the manifest in [`bootstrap.md`](../subsystems/bootstrap.md) budgets a generous cold-start window via `startupProbe` while readiness/liveness poll from t=0).
+**Boot SLO** — the whitepaper's contract table states a design target of cold-start **P99 ≤ 500 ms (Community) / ≤ 800 ms (Enterprise)** ([`../whitepaper.md`](../whitepaper.md)), observable via the emitted `KernelBootReady` JFR event; no in-repo test asserts that threshold, and the reference Kubernetes manifest itself budgets up to 150 s for cold start (see below). Do **not** set a nonzero probe `initialDelay`; use `initialDelaySeconds: 0` plus a `startupProbe` (the manifest in [`bootstrap.md`](../subsystems/bootstrap.md) budgets a generous cold-start window via `startupProbe` while readiness/liveness poll from t=0).
 
 ## Observability
 
@@ -65,10 +77,10 @@ Validated by the v0.9 operational-continuity suite (the `recovery-continuity-gat
 ## Known operational limits (Community)
 
 - **Single-node, NIO carrier** — no `io_uring`, no slab pools (Enterprise overlay). Best-effort performance contract.
-- **Server push is SSE-only** — one-directional `HttpStreamExchange` since 0.10 ([ADR-043](../adr/ADR-043-kernel-http-streaming-spi.md)); no WebSocket, so full-duplex clients still poll. The SSE body is HTTP/1.1 close-delimited today, which matters for reverse proxies that buffer length-unknown responses — see [`subsystems/http.md`](../subsystems/http.md).
+- **Server push is SSE; full duplex is WebSocket, and it is not started unless you ask** — one-directional `HttpStreamExchange` since 0.10 ([ADR-043](../adr/ADR-043-kernel-http-streaming-spi.md)) and `WebSocketExchange` since 0.12 ([ADR-084](../adr/ADR-084-websocket-provider-spi.md)). The WebSocket engine is reachable two ways since 0.12: embeddable — a deployment constructs it and supplies a handshake handler, with no kernel boot — or through the `websocket` subsystem that `KernelBootstrap` starts. The subsystem is **opt-in**, `websocket.enabled` defaulting to `false`, so an upgrade opens no listener (ADR-084 A2). It has **no server-initiated ping** — `keepAliveIntervalMillis` on `WebSocketConfig` is accepted but not honoured by the Community provider, so nothing is sent to hold a NAT/proxy path open through a quiet period (a client's own pings are answered, per RFC 6455 §5.5.2). A dead peer is still reclaimed server-side: the carrier's idle timeout (`websocket.idleTimeoutMillis`, default 60&nbsp;s) closes a connection that has moved no bytes for that long. The SSE body is HTTP/1.1 close-delimited today, which matters for reverse proxies that buffer length-unknown responses — see [`subsystems/http.md`](../subsystems/http.md).
 - **Events do not cross the node boundary on the default driver** — the in-heap bus is single-node and the Outbox is durable *emission*, not cross-node delivery; fanning out to peers means running the Kafka driver. See [`subsystems/events.md`](../subsystems/events.md) → *Delivery Boundary*.
 - **No cross-node coordination seam** — distributed lock / leader election / singleton execution are the host application's concern today.
-- **Caffeine** in-process cache only; no distributed cache provider.
+- **No cache of any kind ships with the kernel** — no in-process cache dependency is declared anywhere in the reactor, and there is no `CacheProvider` SPI. An application that needs caching brings its own.
 
 ## See also
 - [`../support-matrix.md`](../support-matrix.md) — supported runtime, SPI status, Community vs Enterprise scope, deferred capabilities.
